# phlegyas

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINDINGS.md  LICENSE  README.md  READY_TO_TEST.md  SECURITY.md  SESSION_RESTART.md  STATE.md  TESTING_NOTES.md  TEST_RUN_REPORT.md  TEST_TASK_SEES_THIS.md  audit.jsonl  pyproject.toml  pytest.ini  requirements-ci.txt  safe-patterns.example.json  start-mcp-server.sh
.claude/: settings.local.json
.claude/ledger/: chains.json
.dex/: tasks.jsonl
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: auto-pr.yaml  cancel-stale-pr-runs.yml  ci.yml  claude-code-review.yml  publish.yml  release-notes.yml
.specify/features/approval-delegation/: DECISION.md  DESIGN.md  PLAN.md
examples/: SLACK_SETUP.md  cygnus-spawn-contract.md  slack_integration.py
phlegyas/: __init__.py  __main__.py  approver.py  approver_mcp.py  file_queue.py  hook_blocking.py  notifiers.py  sanitize.py  slack.py  supervisor_policy.py  tier1_dangerous.py  tier2_safe.py  tier3_ai.py  trust_cli.py
scripts/: approve  approve_cli.py
src/: __main__.py  approver.py  approver_fastmcp_backup.py  approver_mcp.py  tier1_dangerous.py  tier2_5_trust.py  tier2_safe.py  tier3_ai.py  trust_cli.py
tests/: README.md  conftest.py  test_approver.py  test_blocking_hook.py  test_blocking_hook_integration.py  test_c3_prompt_injection.py  test_file_queue.py  test_main.py  test_phlegyas_approve_cli.py  test_poll_approval.py  test_slack.py  test_supervisor_approve.py  test_supervisor_approve_file_fallback.py  test_supervisor_policy.py  test_tier1_dangerous.py  test_tier2_5_integration.py  test_tier2_5_trust.py  test_tier2_safe.py  test_tier2_safe_custom.py  test_tier3_ai.py  test_trust_cli.py  test_validate_operation.py
